✨ Agrego layout, CSS y JS para estilo y botones Copy en Pages

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   <script src="{{ '/assets/js/copy-button.js' | relative_url }}"></script>
+
 </head>
 <body>
   {{ content }}
