--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-  <script src="{{ '/assets/js/copy-button.js' | relative_url }}"></script>
-
+  <script src="{{ '/assets/js/copy-button.js' | relative_url }}" defer></script>
+  <script src="{{ '/assets/js/theme-toggle.js' | relative_url }}" defer></script>
 </head>
 <body>
+  <!-- Quita esto si tu layout incluye otro <header> -->
+  <!-- {% include header.html %} -->
+
+  <!-- Tu contenido -->
   {{ content }}
 </body>
 </html>
